--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -5,7 +5,10 @@
     <li>
       Title:  <%= link.title %>
       URL:    <%= link.url %>
+      Tags:
+      <% link.tags.each do |tag| %>
+          <%= tag.name %> 
+        <% end %>
     </li>
   <% end %>
 </ul>
-
