--- a/app/views/links/new.erb
+++ b/app/views/links/new.erb
@@ -2,11 +2,15 @@
 <form action='/links' method='post'>
   <label for='title'>
     Title
-  <input type='text' name='title'>
+    <input type='text' name='title'>
   </label>
   <label for='url'>
     URL
     <input type='text' name='url'>
+  </label>
+  <label for='tags'>
+    Tags
+    <input type='text' name='tags'>
   </label>
   <input type='submit' value='Add Link'>
 </form>
