WIP: Add signup form and current_user

--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -1,4 +1,7 @@
-<h1> Links </h1>
+
+<h1> Welcome <% if @user %> <%= @user.email %> <% end %></h1>
+
+<h2> Links </h2>
 
 <ul id='links'>
   <% @links.each do |link| %>
@@ -7,7 +10,7 @@
       URL:    <%= link.url %>
       Tags:
       <% link.tags.each do |tag| %>
-          <%= tag.name %> 
+          <%= tag.name %>
         <% end %>
     </li>
   <% end %>
