Add password confirmation

--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -5,5 +5,8 @@
   <label for='password'>Password
     <input type='password' name='password'>
   </label>
+  <label for='password_confirmation'>Password Confirmation
+    <input type='password' name='password_confirmation'>
+  </label>
   <input type='submit' value='Sign Up'>
 </form>
