--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,6 +1,6 @@
 <form action='/users' method='post'>
   <label for='email'>Email
-    <input type='text' name='email' value='<%= @user.email %>'>
+    <input type='email' name='email' value='<%= @user.email %>' required>
   </label>
   <label for='password'>Password
     <input type='password' name='password'>
